Update KM gas composition to include averaged values and standard deviation

--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -50,11 +50,118 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_10\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_10\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_10\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_10\n",
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_11\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_11\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_11\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_11\n",
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_12\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_12\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_12\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_12\n",
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_28\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_28\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_28\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_28\n",
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_29\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_29\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_29\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_29\n",
+      "Operator: Carbon Mapper\n",
+      "Flight Day: 10_31\n",
+      "Assigning km methane mole fraction for Carbon Mapper on 10_31\n",
+      "Assigning su_raw methane mole fraction for Carbon Mapper on 10_31\n",
+      "Assigning su_normalized methane mole fraction for Carbon Mapper on 10_31\n",
+      "Operator: GHGSat\n",
+      "Flight Day: 10_31\n",
+      "Assigning km methane mole fraction for GHGSat on 10_31\n",
+      "Assigning su_raw methane mole fraction for GHGSat on 10_31\n",
+      "Assigning su_normalized methane mole fraction for GHGSat on 10_31\n",
+      "Operator: GHGSat\n",
+      "Flight Day: 11_02\n",
+      "Assigning km methane mole fraction for GHGSat on 11_02\n",
+      "Assigning su_raw methane mole fraction for GHGSat on 11_02\n",
+      "Assigning su_normalized methane mole fraction for GHGSat on 11_02\n",
+      "Operator: GHGSat\n",
+      "Flight Day: 11_04\n",
+      "Assigning km methane mole fraction for GHGSat on 11_04\n",
+      "Assigning su_raw methane mole fraction for GHGSat on 11_04\n",
+      "Assigning su_normalized methane mole fraction for GHGSat on 11_04\n",
+      "Operator: GHGSat\n",
+      "Flight Day: 11_07\n",
+      "Assigning km methane mole fraction for GHGSat on 11_07\n",
+      "Assigning su_raw methane mole fraction for GHGSat on 11_07\n",
+      "Assigning su_normalized methane mole fraction for GHGSat on 11_07\n",
+      "Operator: Kairos\n",
+      "Flight Day: 10_24\n",
+      "Assigning km methane mole fraction for Kairos on 10_24\n",
+      "Assigning su_raw methane mole fraction for Kairos on 10_24\n",
+      "Assigning su_normalized methane mole fraction for Kairos on 10_24\n",
+      "Operator: Kairos\n",
+      "Flight Day: 10_25\n",
+      "Assigning km methane mole fraction for Kairos on 10_25\n",
+      "Assigning su_raw methane mole fraction for Kairos on 10_25\n",
+      "Assigning su_normalized methane mole fraction for Kairos on 10_25\n",
+      "Operator: Kairos\n",
+      "Flight Day: 10_26\n",
+      "Assigning km methane mole fraction for Kairos on 10_26\n",
+      "Assigning su_raw methane mole fraction for Kairos on 10_26\n",
+      "Assigning su_normalized methane mole fraction for Kairos on 10_26\n",
+      "Operator: Kairos\n",
+      "Flight Day: 10_27\n",
+      "Assigning km methane mole fraction for Kairos on 10_27\n",
+      "Assigning su_raw methane mole fraction for Kairos on 10_27\n",
+      "Assigning su_normalized methane mole fraction for Kairos on 10_27\n",
+      "Operator: Kairos\n",
+      "Flight Day: 10_28\n",
+      "Assigning km methane mole fraction for Kairos on 10_28\n",
+      "Assigning su_raw methane mole fraction for Kairos on 10_28\n",
+      "Assigning su_normalized methane mole fraction for Kairos on 10_28\n",
+      "Operator: Methane Air\n",
+      "Flight Day: 10_25\n",
+      "Assigning km methane mole fraction for Methane Air on 10_25\n",
+      "Assigning su_raw methane mole fraction for Methane Air on 10_25\n",
+      "Assigning su_normalized methane mole fraction for Methane Air on 10_25\n",
+      "Operator: Methane Air\n",
+      "Flight Day: 10_29\n",
+      "Assigning km methane mole fraction for Methane Air on 10_29\n",
+      "Assigning su_raw methane mole fraction for Methane Air on 10_29\n",
+      "Assigning su_normalized methane mole fraction for Methane Air on 10_29\n",
+      "Operator: Scientific Aviation\n",
+      "Flight Day: 11_08\n",
+      "Assigning km methane mole fraction for Scientific Aviation on 11_08\n",
+      "Assigning su_raw methane mole fraction for Scientific Aviation on 11_08\n",
+      "Assigning su_normalized methane mole fraction for Scientific Aviation on 11_08\n",
+      "Operator: Scientific Aviation\n",
+      "Flight Day: 11_10\n",
+      "Assigning km methane mole fraction for Scientific Aviation on 11_10\n",
+      "Assigning su_raw methane mole fraction for Scientific Aviation on 11_10\n",
+      "Assigning su_normalized methane mole fraction for Scientific Aviation on 11_10\n",
+      "Operator: Scientific Aviation\n",
+      "Flight Day: 11_11\n",
+      "Assigning km methane mole fraction for Scientific Aviation on 11_11\n",
+      "Assigning su_raw methane mole fraction for Scientific Aviation on 11_11\n",
+      "Assigning su_normalized methane mole fraction for Scientific Aviation on 11_11\n"
+     ]
+    }
+   ],
    "source": [
     "# Comment out to prevent from accidentally running\n",
     "load_flight_days()\n",
-    "# generate_daily_releases()\n"
+    "generate_daily_releases()\n"
    ],
    "metadata": {
     "collapsed": false
@@ -93,123 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Making flightradar meter dataset for Carbon Mapper with km averaged over 30\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_raw averaged over 30\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_normalized averaged over 30\n",
-      "Making flightradar meter dataset for Carbon Mapper with km averaged over 60\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_raw averaged over 60\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_normalized averaged over 60\n",
-      "Making flightradar meter dataset for Carbon Mapper with km averaged over 90\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_raw averaged over 90\n",
-      "Making flightradar meter dataset for Carbon Mapper with su_normalized averaged over 90\n",
-      "Making flightradar meter dataset for GHGSat with km averaged over 30\n",
-      "Making flightradar meter dataset for GHGSat with su_raw averaged over 30\n",
-      "Making flightradar meter dataset for GHGSat with su_normalized averaged over 30\n",
-      "Making flightradar meter dataset for GHGSat with km averaged over 60\n",
-      "Making flightradar meter dataset for GHGSat with su_raw averaged over 60\n",
-      "Making flightradar meter dataset for GHGSat with su_normalized averaged over 60\n",
-      "Making flightradar meter dataset for GHGSat with km averaged over 90\n",
-      "Making flightradar meter dataset for GHGSat with su_raw averaged over 90\n",
-      "Making flightradar meter dataset for GHGSat with su_normalized averaged over 90\n",
-      "Making flightradar meter dataset for Kairos with km averaged over 30\n",
-      "Making flightradar meter dataset for Kairos with su_raw averaged over 30\n",
-      "Making flightradar meter dataset for Kairos with su_normalized averaged over 30\n",
-      "Making flightradar meter dataset for Kairos with km averaged over 60\n",
-      "Making flightradar meter dataset for Kairos with su_raw averaged over 60\n",
-      "Making flightradar meter dataset for Kairos with su_normalized averaged over 60\n",
-      "Making flightradar meter dataset for Kairos with km averaged over 90\n",
-      "Making flightradar meter dataset for Kairos with su_raw averaged over 90\n",
-      "Making flightradar meter dataset for Kairos with su_normalized averaged over 90\n",
-      "Making flightradar meter dataset for MethaneAir with km averaged over 30\n",
-      "Making flightradar meter dataset for MethaneAir with su_raw averaged over 30\n",
-      "Making flightradar meter dataset for MethaneAir with su_normalized averaged over 30\n",
-      "Making flightradar meter dataset for MethaneAir with km averaged over 60\n",
-      "Making flightradar meter dataset for MethaneAir with su_raw averaged over 60\n",
-      "Making flightradar meter dataset for MethaneAir with su_normalized averaged over 60\n",
-      "Making flightradar meter dataset for MethaneAir with km averaged over 90\n",
-      "Making flightradar meter dataset for MethaneAir with su_raw averaged over 90\n",
-      "Making flightradar meter dataset for MethaneAir with su_normalized averaged over 90\n",
-      "Making stanford meter dataset for Carbon Mapper with km averaged over 30\n",
-      "Making stanford meter dataset for Carbon Mapper with su_raw averaged over 30\n",
-      "Making stanford meter dataset for Carbon Mapper with su_normalized averaged over 30\n",
-      "Making stanford meter dataset for Carbon Mapper with km averaged over 60\n",
-      "Making stanford meter dataset for Carbon Mapper with su_raw averaged over 60\n",
-      "Making stanford meter dataset for Carbon Mapper with su_normalized averaged over 60\n",
-      "Making stanford meter dataset for Carbon Mapper with km averaged over 90\n",
-      "Making stanford meter dataset for Carbon Mapper with su_raw averaged over 90\n",
-      "Making stanford meter dataset for Carbon Mapper with su_normalized averaged over 90\n",
-      "Making stanford meter dataset for GHGSat with km averaged over 30\n",
-      "Making stanford meter dataset for GHGSat with su_raw averaged over 30\n",
-      "Making stanford meter dataset for GHGSat with su_normalized averaged over 30\n",
-      "Making stanford meter dataset for GHGSat with km averaged over 60\n",
-      "Making stanford meter dataset for GHGSat with su_raw averaged over 60\n",
-      "Making stanford meter dataset for GHGSat with su_normalized averaged over 60\n",
-      "Making stanford meter dataset for GHGSat with km averaged over 90\n",
-      "Making stanford meter dataset for GHGSat with su_raw averaged over 90\n",
-      "Making stanford meter dataset for GHGSat with su_normalized averaged over 90\n",
-      "Making stanford meter dataset for Kairos with km averaged over 30\n",
-      "Making stanford meter dataset for Kairos with su_raw averaged over 30\n",
-      "Making stanford meter dataset for Kairos with su_normalized averaged over 30\n",
-      "Making stanford meter dataset for Kairos with km averaged over 60\n",
-      "Making stanford meter dataset for Kairos with su_raw averaged over 60\n",
-      "Making stanford meter dataset for Kairos with su_normalized averaged over 60\n",
-      "Making stanford meter dataset for Kairos with km averaged over 90\n",
-      "Making stanford meter dataset for Kairos with su_raw averaged over 90\n",
-      "Making stanford meter dataset for Kairos with su_normalized averaged over 90\n",
-      "Making stanford meter dataset for MethaneAir with km averaged over 30\n",
-      "Making stanford meter dataset for MethaneAir with su_raw averaged over 30\n",
-      "Making stanford meter dataset for MethaneAir with su_normalized averaged over 30\n",
-      "Making stanford meter dataset for MethaneAir with km averaged over 60\n",
-      "Making stanford meter dataset for MethaneAir with su_raw averaged over 60\n",
-      "Making stanford meter dataset for MethaneAir with su_normalized averaged over 60\n",
-      "Making stanford meter dataset for MethaneAir with km averaged over 90\n",
-      "Making stanford meter dataset for MethaneAir with su_raw averaged over 90\n",
-      "Making stanford meter dataset for MethaneAir with su_normalized averaged over 90\n",
-      "Making team meter dataset for Carbon Mapper with km averaged over 30\n",
-      "Making team meter dataset for Carbon Mapper with su_raw averaged over 30\n",
-      "Making team meter dataset for Carbon Mapper with su_normalized averaged over 30\n",
-      "Making team meter dataset for Carbon Mapper with km averaged over 60\n",
-      "Making team meter dataset for Carbon Mapper with su_raw averaged over 60\n",
-      "Making team meter dataset for Carbon Mapper with su_normalized averaged over 60\n",
-      "Making team meter dataset for Carbon Mapper with km averaged over 90\n",
-      "Making team meter dataset for Carbon Mapper with su_raw averaged over 90\n",
-      "Making team meter dataset for Carbon Mapper with su_normalized averaged over 90\n",
-      "Making team meter dataset for GHGSat with km averaged over 30\n",
-      "Making team meter dataset for GHGSat with su_raw averaged over 30\n",
-      "Making team meter dataset for GHGSat with su_normalized averaged over 30\n",
-      "Making team meter dataset for GHGSat with km averaged over 60\n",
-      "Making team meter dataset for GHGSat with su_raw averaged over 60\n",
-      "Making team meter dataset for GHGSat with su_normalized averaged over 60\n",
-      "Making team meter dataset for GHGSat with km averaged over 90\n",
-      "Making team meter dataset for GHGSat with su_raw averaged over 90\n",
-      "Making team meter dataset for GHGSat with su_normalized averaged over 90\n",
-      "Making team meter dataset for Kairos with km averaged over 30\n",
-      "Making team meter dataset for Kairos with su_raw averaged over 30\n",
-      "Making team meter dataset for Kairos with su_normalized averaged over 30\n",
-      "Making team meter dataset for Kairos with km averaged over 60\n",
-      "Making team meter dataset for Kairos with su_raw averaged over 60\n",
-      "Making team meter dataset for Kairos with su_normalized averaged over 60\n",
-      "Making team meter dataset for Kairos with km averaged over 90\n",
-      "Making team meter dataset for Kairos with su_raw averaged over 90\n",
-      "Making team meter dataset for Kairos with su_normalized averaged over 90\n",
-      "Making team meter dataset for MethaneAir with km averaged over 30\n",
-      "Making team meter dataset for MethaneAir with su_raw averaged over 30\n",
-      "Making team meter dataset for MethaneAir with su_normalized averaged over 30\n",
-      "Making team meter dataset for MethaneAir with km averaged over 60\n",
-      "Making team meter dataset for MethaneAir with su_raw averaged over 60\n",
-      "Making team meter dataset for MethaneAir with su_normalized averaged over 60\n",
-      "Making team meter dataset for MethaneAir with km averaged over 90\n",
-      "Making team meter dataset for MethaneAir with su_raw averaged over 90\n",
-      "Making team meter dataset for MethaneAir with su_normalized averaged over 90\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Load data\n",
     "cm_meter_raw, ghg_meter_raw, kairos_meter_raw, mair_meter_raw, sciav_meter_raw = load_summary_files()\n",
