Clean up Sci AV code so the overpass summary is now automatically generated

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -77,6 +77,7 @@
       "Generating operator summary file for Kairos LS25 Stage 2\n",
       "Generating operator summary file for Kairos LS25 Stage 3\n",
       "Generating operator summary file for Methane Air Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n",
       "Generating operator summary file for Carbon Mapper Stage 1\n",
       "Generating operator summary file for Carbon Mapper Stage 2\n",
       "Generating operator summary file for Carbon Mapper Stage 3\n",
@@ -92,16 +93,15 @@
       "Generating operator summary file for Kairos LS25 Stage 1\n",
       "Generating operator summary file for Kairos LS25 Stage 2\n",
       "Generating operator summary file for Kairos LS25 Stage 3\n",
-      "Generating operator summary file for Methane Air Stage 1\n"
+      "Generating operator summary file for Methane Air Stage 1\n",
+      "Generating operator summary file for Scientific Aviation Stage 1\n"
      ]
     }
    ],
    "source": [
     "\n",
     "generate_all_overpass_reports(strict_discard=False, timekeeper='flightradar', gas_comp_source='km', time_ave='60')\n",
-    "generate_all_overpass_reports(strict_discard=True, timekeeper='flightradar', gas_comp_source='km', time_ave='60')\n",
-    "\n",
-    "#SciAv Overpass Summary was manually created"
+    "generate_all_overpass_reports(strict_discard=True, timekeeper='flightradar', gas_comp_source='km', time_ave='60')"
    ],
    "metadata": {
     "collapsed": false
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -157,16 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the GHGSat overpasses dataframe (192) matches the highest value for overpass_id (192).\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Check GHGSat\n",
     "\n",
@@ -183,16 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the Kairos overpasses dataframe (349) matches the highest value for overpass_id (349).\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Check Kairos\n",
     "\n",
@@ -209,16 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the Scientific Aviation overpasses dataframe (18) matches the highest value for overpass_id (18).\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Check Scientific Aviation\n",
     "\n",
@@ -235,16 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the Methane Air overpasses dataframe (24) matches the highest value for overpass_id (24).\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Check Methane Air\n",
     "\n",
@@ -272,21 +240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average overpass altitude (feet) across all reported overpasses:\n",
-      "\n",
-      "Carbon Mapper: 10,341.6 ft\n",
-      "GHGSat: 6,594.9 ft\n",
-      "Kairos: 1,351.4 ft\n",
-      "Methane Air: 43,591.6 ft\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from methods_source import load_overpass_summary\n",
     "\n",
@@ -318,24 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Carbon Mapper average daily altitude:\n",
-      "\n",
-      "           altitude_feet\n",
-      "2022-10-10 10,372.2 feet\n",
-      "2022-10-11 10,327.0 feet\n",
-      "2022-10-12 10,218.8 feet\n",
-      "2022-10-28 10,182.4 feet\n",
-      "2022-10-29 10,373.5 feet\n",
-      "2022-10-31 10,519.8 feet\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from methods_source import calc_daily_altitude\n",
     "operator = 'Carbon Mapper'\n",
@@ -349,22 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GHGSat average daily altitude:\n",
-      "\n",
-      "           altitude_feet\n",
-      "2022-10-31  6,565.1 feet\n",
-      "2022-11-02  6,561.0 feet\n",
-      "2022-11-04  6,575.5 feet\n",
-      "2022-11-07  6,694.1 feet\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "operator = 'GHGSat'\n",
     "ghg_alt = calc_daily_altitude(operator)\n",
@@ -377,23 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kairos average daily altitude:\n",
-      "\n",
-      "           altitude_feet\n",
-      "2022-10-24  1,334.4 feet\n",
-      "2022-10-25  1,317.9 feet\n",
-      "2022-10-26  1,328.9 feet\n",
-      "2022-10-27  1,389.3 feet\n",
-      "2022-10-28  1,385.6 feet\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "operator = 'Kairos'\n",
     "kairos_alt = calc_daily_altitude(operator)\n",
@@ -406,26 +316,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Methane Air average daily altitude:\n",
-      "\n",
-      "           altitude_feet\n",
-      "2022-10-25 43,367.8 feet\n",
-      "2022-10-29 43,780.9 feet\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "operator = 'Methane Air'\n",
     "mair_alt = calc_daily_altitude(operator)\n",
     "print(f'{operator} average daily altitude:\\n')\n",
     "print(mair_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "##### Summarize distribution of overpasses\n",
+    "\n",
+    "Total number of overpasses, missing data, max and min given to each team, number that passed Stanford QC\n",
+    "\n",
+    "Missing overpasses: documented as an overpass by Stanford, but not included in Operator Report file"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Mapper missing overpasses: 3\n",
+      "Largest volume overpass for Carbon Mapper:\n",
+      "Release Rate: 1443.09917328525 kg CH4 / hr\n",
+      "[1366.7685660986533, 1519.4297804718465, 95% CI]\n",
+      "(sigma from gas flow: 40.87752593594759)\n",
+      "(sigma from meter: 1.936966836734694)\n",
+      "(sigma from gas composition: 0.0013617132208482)\n",
+      "(combined total sigma: 38.94418734010025)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import find_missing_data, load_overpass_summary\n",
+    "# Carbon Mapper\n",
+    "operator = 'Carbon Mapper'\n",
+    "missing = find_missing_data(operator)\n",
+    "print(f'{operator} missing overpasses: {len(missing)}')\n",
+    "\n",
+    "overpasses = load_overpass_summary(operator, stage=1)\n",
+    "max_release_cols = ['release_rate_kgh', 'lower_95CI', 'upper_95CI', 'ch4_kgh_sigma', 'sigma_flow_variability', 'sigma_meter_reading', 'sigma_gas_composition']\n",
+    "max_info = overpasses.loc[overpasses.release_rate_kgh.idxmax()][max_release_cols]\n",
+    "print(f'Largest volume overpass for {operator}:')\n",
+    "print(f'Release Rate: {max_info.release_rate_kgh} kg CH4 / hr')\n",
+    "print(f'[{max_info.lower_95CI}, {max_info.upper_95CI}, 95% CI]')\n",
+    "print(f'(sigma from gas flow: {max_info.sigma_flow_variability})')\n",
+    "print(f'(sigma from meter: {max_info.sigma_meter_reading})')\n",
+    "print(f'(sigma from gas composition: {max_info.sigma_gas_composition})')\n",
+    "print(f'(combined total sigma: {max_info.ch4_kgh_sigma})')\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     overpass_id   overpass_datetime  zero_release  non_zero_release  \\\n",
+      "0            1.0 2022-10-10 17:00:39         False              True   \n",
+      "1            2.0 2022-10-10 17:14:15         False              True   \n",
+      "2            3.0 2022-10-10 17:28:37         False              True   \n",
+      "3            4.0 2022-10-10 17:43:05         False              True   \n",
+      "4            5.0 2022-10-10 17:55:26          True             False   \n",
+      "..           ...                 ...           ...               ...   \n",
+      "116        117.0 2022-10-31 20:30:07         False              True   \n",
+      "117        118.0 2022-10-31 20:41:33          True             False   \n",
+      "118        119.0 2022-10-31 20:52:33         False              True   \n",
+      "119        120.0 2022-10-31 21:03:38         False              True   \n",
+      "120        121.0 2022-10-31 21:14:24         False              True   \n",
+      "\n",
+      "     operator_kept  stanford_kept  phase_iii  pass_all_qc  altitude_feet  \\\n",
+      "0             True           True          1         True    10351.26648   \n",
+      "1             True           True          1         True    10398.14464   \n",
+      "2            False           True          1        False    10419.39464   \n",
+      "3             True           True          1         True    10416.32015   \n",
+      "4             True           True          0         True    10371.44592   \n",
+      "..             ...            ...        ...          ...            ...   \n",
+      "116           True           True          1         True    10530.22797   \n",
+      "117           True           True          0         True    10538.14464   \n",
+      "118           True           True          1         True    10505.70874   \n",
+      "119           True           True          1         True    10504.81131   \n",
+      "120           True           True          0         True    10502.86686   \n",
+      "\n",
+      "     fail_all_qc  ...  upper_95CI  lower_95CI  sigma_flow_variability  \\\n",
+      "0          False  ...   11.062080   10.782193                0.061894   \n",
+      "1          False  ...    6.760578    6.465319                0.068967   \n",
+      "2          False  ...    8.800302    8.477044                0.077008   \n",
+      "3          False  ...    4.588722    4.301639                0.067039   \n",
+      "4          False  ...    0.000000    0.000000                0.000000   \n",
+      "..           ...  ...         ...         ...                     ...   \n",
+      "116        False  ...  323.671627  318.520994                0.244466   \n",
+      "117        False  ...    0.000000    0.000000                0.000000   \n",
+      "118        False  ...  478.167603  469.461642                1.190991   \n",
+      "119        False  ...   43.164899   42.459768                0.053772   \n",
+      "120        False  ...  535.366380  523.424954                2.280217   \n",
+      "\n",
+      "     sigma_meter_reading  sigma_gas_composition  operator_detected  \\\n",
+      "0               0.039720               0.001617               True   \n",
+      "1               0.039565               0.001617              False   \n",
+      "2               0.039648               0.001617               True   \n",
+      "3               0.039443               0.001617              False   \n",
+      "4               0.000000               0.000000              False   \n",
+      "..                   ...                    ...                ...   \n",
+      "116             0.429181               0.003645               True   \n",
+      "117             0.000000               0.000000              False   \n",
+      "118             0.633305               0.003645               True   \n",
+      "119             0.057223               0.003645               True   \n",
+      "120             0.707596               0.003645               True   \n",
+      "\n",
+      "     operator_quantification  operator_lower  operator_upper     qc_summary  \n",
+      "0                  87.193762       42.486457      131.901066       pass_all  \n",
+      "1                        NaN             NaN             NaN       pass_all  \n",
+      "2                        NaN             NaN             NaN  fail_operator  \n",
+      "3                        NaN             NaN             NaN       pass_all  \n",
+      "4                        NaN             NaN             NaN       pass_all  \n",
+      "..                       ...             ...             ...            ...  \n",
+      "116               443.587403      354.282872      532.891934       pass_all  \n",
+      "117                      NaN             NaN             NaN       pass_all  \n",
+      "118               573.856701      458.250900      689.462503       pass_all  \n",
+      "119                76.023489       48.828854      103.218125       pass_all  \n",
+      "120               669.420449      450.520398      888.320499       pass_all  \n",
+      "\n",
+      "[121 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(overpasses)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
