--- a/07_qc_comparison.ipynb
+++ b/07_qc_comparison.ipynb
@@ -141,6 +141,13 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
